Improve autofill accessibility semantics and events

Fix a number of autofill issues with screen readers, including:
- Left/right arrow in textfield not reading chars when autofill visible
- Nothing read for up/down arrow in autofill
- Positional n/m (posinset/setsize) info not provided with entries

Bug: 761857
Change-Id: I0052fa2edf2dd1d68d2cbf5ec039ae89423f4c14
Reviewed-on: https://chromium-review.googlesource.com/947748
Commit-Queue: Aaron Leventhal <aleventhal@chromium.org>
Reviewed-by: Evan Stade <estade@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540907}
Former-commit-id: 84d400ad83a8c81d29db85700573adcdeea34b1b