ui/views/accessibility/native_view_accessibility_win.cc
@@ -24,7 +24,6 @@
 #include "ui/base/win/accessibility_misc_utils.h"
 #include "ui/base/win/atl_module.h"
 #include "ui/views/controls/button/button.h"
-#include "ui/views/focus/focus_manager.h"
 #include "ui/views/widget/widget.h"
 #include "ui/views/win/hwnd_util.h"
 #include "ui/wm/core/window_util.h"
